[package]
name = "fossil_headers_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accumulators = { version = "0.4.2", features = ["all"] }
axum = { version = "0.7.5", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive"] }
ctrlc = "3.4.4"
derive_more = {version = "0.99.0", features = ["from"] }
dotenvy = "0.15.7"
futures = "0.3.30"
futures-util = "0.3.30"
hex = "0.4"
reqwest = { version = "0.12.4", features = [ "json" ] }
serde = "1.0.203"
serde_json = "1.0.117"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono", "tls-rustls", "macros" ] }
tokio = { version = "1.38.0", features = [ "rt", "rt-multi-thread", "macros" ] }
env_logger = "0.11"
lazy_static = "1.5.0"
log = "0.4"
anyhow = "1.0.86"
once_cell = "1.1.0"
